# degiro-tracker

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
protos/: assets.proto  user.proto
src/: App.tsx  index.tsx  main.less
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mods.rs
src-tauri/src/mods/: assets.rs  config.rs  user.rs
src-tauri/src/protos/: mod.rs
src/components/Button/: Buttons.less  Buttons.tsx
src/components/Input/: Input.less  Input.tsx
src/pages/Intro/: Intro.less  Intro.tsx
src/pages/Layout/: Layout.tsx  layout.less
src/services/: tauriSvc.ts  userSvc.ts
src/types/google/protobuf/: timestamp.pb.ts
src/types/protos/: assets.pb.ts  user.pb.ts
src/types/tauri/: cmds.ts
