[package]
name = "degiro-tracker"
version = "1.0.0"
description = "Degiro Tracker"
authors = ["you"]
license = "MIT"
repository = "https://github.com/LoyalPotato/degiro-tracker"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
prost-build = { version = "0.11" }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobufs
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
